Move non-released `org.apache.sis.map` package to an incubator module. A new module named "org.apache.sis.portrayal.map" is created, but that module may be temporary if its content graduates to the endorsed module.